fix: adjust spacing and image styles in section header and global styles

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -36,7 +36,7 @@ body {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 12rem;
+  gap: 6rem;
   overflow: hidden;
 }
 
@@ -54,7 +54,7 @@ h1 {
 @media (max-width: 900px) {
   body {
     --event_grid_cols: 2;
-    --h1-size: 48px;
+    --h1-size: 32px;
   }
 }
 
